@@ -1,3 +1,8 @@
+2007-01-21 Tim Jenness <tjenness@cpan.org>
+
+	* Temp.pm: Remove umask control (doesn't seem to have any effect
+	on sysopen() anyway (thanks to Peter Dintelmann)
+
 2006-08-18  Tim Jenness  <tjenness@cpan.org>
 
 	--- RELEASE 0.17 CPAN ----
